  Add #if for including unit tests only for debug builds
  Don't hide Maximize button in application main window
  Fix crash when adding lots of files (#2951908)
  Add progress dialog
  Update copyrights to 2011
  Fix bug that Calculate-toolbar button was not disabled when processing items
  Disable Exit-item in File-menu when processing items
  Center About-dialog to main window

CheckSum Tool 0.6.0 - 2009-05-07 (r269)
  Split code to two additional libraries (SumLib and Utils).
  Installer: install new library files (r267)
  Allow drag&drop files from Windows Explorer
  Allow drag&drop folders from Windows Explorer
  Installer: Prevent starting second instance
  Enable Verify-feature only when there are checksums in the list (r261)
  Enable Calculate-feature only when there are items in the list (r262)
  Ask if user wants to save unsaved items before loading new list (r263)
  Update new forums URL to readme file (r268)
  Bugfix: Product name was wrong (without space) in About-dialog.
  Bugfix: Adding large file (over 2 GB) caused a crash (r259)

CheckSum Tool 0.5.0 - 2008-04-27 (r217)
  New toolbar/menuitem icons from famfamfam.com (#1883992)
  Ask adding files in all subfolders of the selected folder.
  Save configuration to XML file (window size/position, toolbars)
  Add second toolbar for checksum-related buttons
  New list column named "Size", showing file size.
  Add ProgressBar for showing process progress.
  Improve file size formatting in main window.
  Make configuration XML file more structured.
  Add version number for the configuration file.
  Improve message asking about adding subfolders.
  Change config file folder to %APPDATA%/ChecksumTool/
  Added default config file to the installer.
  Copy default config file to distribution in NAnt build file.
  Bugfix: Fix updating item count in the statusbar.
  Bugfix: NAnt build was broken after adding Src/Settings folder.

CheckSum Tool 0.4.0 - 2008-02-05 (r158)