@@ -15,6 +15,7 @@ CheckSum Tool 0.7.0
   Fix bug that Calculate-toolbar button was not disabled when processing items
   Disable Exit-item in File-menu when processing items
   Center About-dialog to main window
+  Add View-menu items to select which kind of items to show
 
 CheckSum Tool 0.6.0 - 2009-05-07 (r269)
   Split code to two additional libraries (SumLib and Utils).
